--- a/Session/task01/index.html
+++ b/Session/task01/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>session task</title>
+	</head>
 	<body>
-		<h1>Main Header</h1>
+		<h1>Lorem ipsum</h1>
+		<p>
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+			<a href="page1.html" type="_blank">page1</a> Laudantium velit officiis cum
+			eaque expedita reiciendis nam, dignissimos dolorem nihil mollitia aliquid,
+			ab exercitationem doloribus doloremque
+			<a href="page2.html" type="_blank">page2</a> iusto, odit placeat maiores
+			tenetur.
+		</p>
 	</body>
 </html>
