adding margin auto

--- a/session/task02/index.html
+++ b/session/task02/index.html
@@ -10,30 +10,33 @@
 </head>
 
 <body>
-  <div>
-    <img src="https://preview.colorlib.com/theme/satner/img/services/xs1.png.pagespeed.ic.gcHJ8aBXFH.webp"
-      alt="WP DEVELOPING photo">
-    <h4>WP DEVELOPING</h4>
-    <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
-  </div>
-  <div>
-    <img src="https://preview.colorlib.com/theme/satner/img/services/xs2.png.pagespeed.ic.czl_ahax99.webp"
-      alt="UI/UX DESIGN photo">
-    <h4>UI/UX DESIGN</h4>
-    <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
-  </div>
-  <div>
-    <img src="https://preview.colorlib.com/theme/satner/img/services/xs3.png.pagespeed.ic.qKtVc3xyLF.webp"
-      alt="WEB DESIGN photo">
-    <h4>WEB DESIGN</h4>
-    <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
-  </div>
-  <div>
-    <img src="https://preview.colorlib.com/theme/satner/img/services/xs4.png.pagespeed.ic.Rrz2NV673m.webp"
-      alt="SEO OPTIMIZE photo">
-    <h4>SEO OPTIMIZE</h4>
-    <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
-  </div>
+  <section>
+    <div>
+      <img src="https://preview.colorlib.com/theme/satner/img/services/xs1.png.pagespeed.ic.gcHJ8aBXFH.webp"
+        alt="WP DEVELOPING photo">
+      <h4>WP DEVELOPING</h4>
+      <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+    </div>
+    <div>
+      <img src="https://preview.colorlib.com/theme/satner/img/services/xs2.png.pagespeed.ic.czl_ahax99.webp"
+        alt="UI/UX DESIGN photo">
+      <h4>UI/UX DESIGN</h4>
+      <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+    </div>
+    <div>
+      <img src="https://preview.colorlib.com/theme/satner/img/services/xs3.png.pagespeed.ic.qKtVc3xyLF.webp"
+        alt="WEB DESIGN photo">
+      <h4>WEB DESIGN</h4>
+      <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+    </div>
+    <div>
+      <img src="https://preview.colorlib.com/theme/satner/img/services/xs4.png.pagespeed.ic.Rrz2NV673m.webp"
+        alt="SEO OPTIMIZE photo">
+      <h4>SEO OPTIMIZE</h4>
+      <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+    </div>
+  </section>
+
 </body>
 
 </html>
