--- a/tasks/task05/index.html
+++ b/tasks/task05/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/main.css" />
+		<title>index</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
-  <title>index</title>
-</head>
-
-<body>
-
-</body>
-
+	<body>
+		<section class="introduce-container">
+			<div class="introduce-img inline-block">
+				<img
+					src="https://preview.colorlib.com/theme/satner/img/xabout-us.png.pagespeed.ic.nAUE9eqUQI.webp"
+					alt="web dev image"
+				/>
+			</div>
+			<div class="introduce-details inline-block">
+				<h2>LET’S<br />INTRODUCE ABOUT<br />MYSELF</h2>
+				<p>
+					Whose given. Were gathered. There first subdue greater. Bearing you
+					Whales heaven midst their. Beast creepeth. Fish days.
+				</p>
+				<p>
+					Is give may shall likeness made yielding spirit a itself together
+					created after sea is in beast beginning signs open god you're
+					gathering whose gathered cattle let. Creature whales fruit unto meat
+					the life beginning all in under give two.
+				</p>
+				<button class="download-cv">Download CV</button>
+			</div>
+		</section>
+	</body>
 </html>
