--- a/homeWorkTasks/task07/index.html
+++ b/homeWorkTasks/task07/index.html
@@ -15,6 +15,22 @@
 		<title>index</title>
 	</head>
 	<body>
+		<section class="myapp">
+			<div class="details-container">
+				<i class="fas fa-paper-plane"></i>
+				<h2>What is MyApp?</h2>
+				<p>
+					Nunc id ante quis tellus faucibus dictum in eget metus. Duis <br />
+					suscipit elit sem, sed mattis tellus accumsan eget. Quisque <br />
+					consequat venenatis rutrum.
+				</p>
+				<button class="btn">Learn More</button>
+			</div>
+			<div class="img-container">
+				<img src="img/laptop-floating.png" alt="laptop floating" />
+			</div>
+			<div class="clear-fix"></div>
+		</section>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
 			integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
