completing about-us section

--- a/homeWorkTasks/task07/index.html
+++ b/homeWorkTasks/task07/index.html
@@ -15,8 +15,8 @@
 		<title>index</title>
 	</head>
 	<body>
-		<section class="myapp">
-			<div class="details-container">
+		<section class="my-app">
+			<div class="my-app__details">
 				<i class="fas fa-paper-plane"></i>
 				<h2>What is MyApp?</h2>
 				<p>
@@ -28,6 +28,28 @@
 			</div>
 			<div class="img-container">
 				<img src="img/laptop-floating.png" alt="laptop floating" />
+			</div>
+			<div class="clear-fix"></div>
+		</section>
+		<section class="about-us">
+			<div class="about-us__img">
+				<img src="img/ipad-with-cover-2.png" alt="ipad with cover" />
+			</div>
+			<div class="about-us__details">
+				<i class="fas fa-paper-plane"></i>
+				<h2>Learn about us</h2>
+				<p>
+					We have been operating for over 30 years and are Members of The
+					Federation of Master Builders. We work on projects big and small from
+					small residential extensions to full house and commercial builds and
+					we are registered NHBC house builders.
+				</p>
+				<hr />
+				<p>
+					I am text block. Click edit button to change this text. Lorem ipsum
+					dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus
+					nec ullamcorper mattis, pulvinar dapibus leo.
+				</p>
 			</div>
 			<div class="clear-fix"></div>
 		</section>
