--- a/homeWorkTasks/task07/index.html
+++ b/homeWorkTasks/task07/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- link Fontawsome CSS -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -11,11 +12,14 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main.css" />
 		<title>index</title>
 	</head>
 	<body>
+		<!-- my app start -->
 		<section class="my-app">
+			<!-- my-app-details start -->
 			<div class="my-app__details">
 				<i class="fas fa-paper-plane"></i>
 				<h2>What is MyApp?</h2>
@@ -26,15 +30,23 @@
 				</p>
 				<button class="btn">Learn More</button>
 			</div>
+			<!-- my-app-details end -->
+			<!-- img-container start -->
 			<div class="img-container">
 				<img src="img/laptop-floating.png" alt="laptop floating" />
 			</div>
+			<!-- img-container end -->
 			<div class="clear-fix"></div>
 		</section>
+		<!-- my app end -->
+		<!-- about-us start -->
 		<section class="about-us">
+			<!-- about-us-img start -->
 			<div class="about-us__img">
 				<img src="img/ipad-with-cover-2.png" alt="ipad with cover" />
 			</div>
+			<!-- about-us-img end -->
+			<!-- about-us-details start-->
 			<div class="about-us__details">
 				<i class="fas fa-paper-plane"></i>
 				<h2>Learn about us</h2>
@@ -51,8 +63,11 @@
 					nec ullamcorper mattis, pulvinar dapibus leo.
 				</p>
 			</div>
-			<div class="clear-fix"></div>
+			<!-- about-us-details end-->
+			<div class="clear-fix"></div> 
 		</section>
+		<!-- about-us end -->
+		<!-- link Fontawsome JS -->
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
 			integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
