--- a/homeWorkTasks/task07/index.html
+++ b/homeWorkTasks/task07/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- link Fontawsome CSS -->
+		<!-- Fontawsome CSS -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -19,23 +19,23 @@
 	<body>
 		<!-- my app start -->
 		<section class="my-app">
-			<!-- my-app-details start -->
-			<div class="my-app__details">
+			<!-- my-app-container start -->
+			<div class="my-app__container">
 				<i class="fas fa-paper-plane"></i>
-				<h2>What is MyApp?</h2>
-				<p>
+				<h2 class="my-app__title">What is MyApp?</h2>
+				<p class="my-app__details">
 					Nunc id ante quis tellus faucibus dictum in eget metus. Duis <br />
 					suscipit elit sem, sed mattis tellus accumsan eget. Quisque <br />
 					consequat venenatis rutrum.
 				</p>
 				<button class="btn">Learn More</button>
 			</div>
-			<!-- my-app-details end -->
-			<!-- img-container start -->
-			<div class="img-container">
+			<!-- my-app-container end -->
+			<!-- my-app-img start -->
+			<div class="my-app__img">
 				<img src="img/laptop-floating.png" alt="laptop floating" />
 			</div>
-			<!-- img-container end -->
+			<!-- my-app-img end -->
 			<div class="clear-fix"></div>
 		</section>
 		<!-- my app end -->
@@ -46,28 +46,28 @@
 				<img src="img/ipad-with-cover-2.png" alt="ipad with cover" />
 			</div>
 			<!-- about-us-img end -->
-			<!-- about-us-details start-->
-			<div class="about-us__details">
+			<!-- about-us-container start-->
+			<div class="about-us__container">
 				<i class="fas fa-paper-plane"></i>
-				<h2>Learn about us</h2>
-				<p>
+				<h2 class="about-us__title">Learn about us</h2>
+				<p class="about-us__details">
 					We have been operating for over 30 years and are Members of The
 					Federation of Master Builders. We work on projects big and small from
 					small residential extensions to full house and commercial builds and
 					we are registered NHBC house builders.
 				</p>
 				<hr />
-				<p>
+				<p class="about-us__details">
 					I am text block. Click edit button to change this text. Lorem ipsum
 					dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus
 					nec ullamcorper mattis, pulvinar dapibus leo.
 				</p>
 			</div>
-			<!-- about-us-details end-->
-			<div class="clear-fix"></div> 
+			<!-- about-us-container end-->
+			<div class="clear-fix"></div>
 		</section>
 		<!-- about-us end -->
-		<!-- link Fontawsome JS -->
+		<!-- Fontawsome JS -->
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
 			integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
