--- a/homeWorkTasks/task08/index.html
+++ b/homeWorkTasks/task08/index.html
@@ -16,73 +16,96 @@
 		<title>index</title>
 	</head>
 	<body>
-		<section class="main-section">
-			<div class="box">
-				<div class="icon"><i class="fas fa-key"></i></div>
-				<div class="details">
-					<h5>Private Solutions</h5>
-					<p>
+		<!-- main start -->
+		<section class="main">
+			<!-- container start -->
+			<div class="container float-left">
+				<img class="container__img" src="img/key.png" alt="key" />
+				<!-- container-content start -->
+				<div class="container__content float-right">
+					<h5 class="container__title">Private Solutions</h5>
+					<p class="container__description">
 						Morbi pellentesque, nisl id semper bibendum, nibh sem fermentum
 						magna, eget commodo.
 					</p>
 				</div>
+				<!-- container-content end -->
 			</div>
-
-			<div class="box">
-				<div class="icon"><i class="far fa-thumbs-up"></i></div>
-				<div class="details">
-					<h5>Small Business Discounts</h5>
-					<p>
+			<!-- container end -->
+			<!-- container start -->
+			<div class="container float-left margin-left-40">
+				<img class="container__img" src="img/thumbs-up.png" alt="thumbs-up" />
+				<!-- container-content start -->
+				<div class="container__content float-right">
+					<h5 class="container__title">Small Business Discounts</h5>
+					<p class="container__description">
 						Morbi pellentesque, nisl id semper bibendum, nibh sem fermentum
 						magna, eget commodo.
 					</p>
 				</div>
+				<!-- container-content end -->
 			</div>
-
-			<div class="box">
-				<div class="icon"><i class="far fa-heart"></i></div>
-				<div class="details">
-					<h5>Satisfied Clients</h5>
-					<p>
+			<!-- container end -->
+			<!-- container start -->
+			<div class="container float-right margin-right-40">
+				<img class="container__img" src="img/heart.png" alt="heart" />
+				<!-- container-content start -->
+				<div class="container__content float-right">
+					<h5 class="container__title">Satisfied Clients</h5>
+					<p class="container__description">
 						Morbi pellentesque, nisl id semper bibendum, nibh sem fermentum
 						magna, eget commodo.
 					</p>
 				</div>
+				<!-- container-content end -->
 			</div>
-
-			<div class="box">
-				<div class="icon"><i class="fas fa-sliders-h"></i></div>
-				<div class="details">
-					<h5>Powerful Options</h5>
-					<p>
+			<!-- container end -->
+			<!-- container start -->
+			<div class="container float-left margin-top-80">
+				<img class="container__img" src="img/params.png" alt="params" />
+				<!-- container-content start -->
+				<div class="container__content float-right">
+					<h5 class="container__title">Powerful Options</h5>
+					<p class="container__description">
 						Morbi pellentesque, nisl id semper bibendum, nibh sem fermentum
 						magna, eget commodo.
 					</p>
 				</div>
+				<!-- container-content end -->
 			</div>
-
-			<div class="box">
-				<div class="icon"><i class="fas fa-desktop"></i></div>
-				<div class="details">
-					<h5>Responsive Design</h5>
-					<p>
+			<!-- container end -->
+			<!-- container start -->
+			<div class="container float-left margin-top-80 margin-left-40">
+				<img class="container__img" src="img/display.png" alt="display" />
+				<!-- container-content start -->
+				<div class="container__content float-right">
+					<h5 class="container__title">Responsive Design</h5>
+					<p class="container__description">
 						Morbi pellentesque, nisl id semper bibendum, nibh sem fermentum
 						magna, eget commodo.
 					</p>
 				</div>
+				<!-- container-content end -->
 			</div>
-
-			<div class="box">
-				<div class="icon"><i class="far fa-star"></i></div>
-				<div class="details">
-					<h5>Favourite new brand</h5>
-					<p>
+			<!-- container end -->
+			<!-- container start -->
+			<div class="container float-right margin-top-80 margin-right-40">
+				<img class="container__img" src="img/star.png" alt="star" />
+				<!-- container-content start -->
+				<div class="container__content float-right">
+					<h5 class="container__title">Favourite new brand</h5>
+					<p class="container__description">
 						Morbi pellentesque, nisl id semper bibendum, nibh sem fermentum
 						magna, eget commodo.
 					</p>
 				</div>
+				<!-- container-content end -->
 			</div>
+			<!-- container end -->
+			<!-- clear float -->
+			<div class="clear-fix"></div>
 		</section>
+		<!-- main end -->
 		<!-- Font Awesome JS -->
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
