--- a/homeWorkTasks/task09/index.html
+++ b/homeWorkTasks/task09/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header class="header">
-			<img src="img/logo-light.png" alt="logo light" />
+			<img class="logo" src="img/logo-light.png" alt="logo light" />
 			<nav class="navbar">
 				<a href="#">home</a>
 				<a href="#">about</a>
 				<a href="#">services</a>
 				<a href="#">pricing</a>
 				<a href="#">news</a>
-				<a href="#">contact</a>
+				<a class="contact" href="#">contact</a>
 			</nav>
 		</header>
 	</body>
