--- a/homeWorkTasks/task10/index.html
+++ b/homeWorkTasks/task10/index.html
@@ -4,8 +4,112 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Font Awesome CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main.css" />
 		<title>index</title>
 	</head>
-	<body></body>
+	<body>
+		<!-- footer start -->
+		<footer>
+			<!-- footer-main start -->
+			<div class="footer__main">
+				<!-- widget start -->
+				<div class="widget float-left">
+					<h4 class="widget__title uppercase-text">product</h4>
+					<ul class="widget__content">
+						<li><a class="capitalize-text" href="#">features</a></li>
+						<li><a class="capitalize-text" href="#">pricing</a></li>
+						<li><a class="capitalize-text" href="#">usage</a></li>
+						<li><a class="capitalize-text" href="#">terms</a></li>
+						<li><a class="capitalize-text" href="#">privacy</a></li>
+						<li><a class="capitalize-text" href="#">terms</a></li>
+					</ul>
+				</div>
+				<!-- widget end -->
+				<!-- widget start -->
+				<div class="widget float-left">
+					<h4 class="widget__title uppercase-text">customers</h4>
+					<ul class="widget__content">
+						<li><a class="capitalize-text" href="#">our clients</a></li>
+						<li><a class="capitalize-text" href="#">showcase</a></li>
+						<li><a class="uppercase-text" href="#">faq</a></li>
+						<li><a class="capitalize-text" href="#">tickets</a></li>
+					</ul>
+				</div>
+				<!-- widget end -->
+				<!-- widget start -->
+				<div class="widget float-left">
+					<h4 class="widget__title uppercase-text">support</h4>
+					<ul class="widget__content">
+						<li><a class="capitalize-text" href="#">articles</a></li>
+						<li><a class="capitalize-text" href="#">support</a></li>
+						<li><a class="uppercase-text" href="#">faq</a></li>
+						<li><a class="capitalize-text" href="#">tickets</a></li>
+						<li><a class="capitalize-text" href="#">chat</a></li>
+					</ul>
+				</div>
+				<!-- widget end -->
+				<!-- widget start -->
+				<div class="widget float-left">
+					<h4 class="widget__title uppercase-text">company</h4>
+					<ul class="widget__content">
+						<li><a class="capitalize-text" href="#">about us</a></li>
+						<li><a class="capitalize-text" href="#">history</a></li>
+						<li><a class="capitalize-text" href="#">team</a></li>
+						<li><a class="capitalize-text" href="#">meetups</a></li>
+						<li><a class="capitalize-text" href="#">terms</a></li>
+					</ul>
+				</div>
+				<!-- widget end -->
+				<!-- widget start -->
+				<div class="widget float-left">
+					<h4 class="widget__title uppercase-text">resources</h4>
+					<ul class="widget__content">
+						<li><a class="capitalize-text" href="#">articles</a></li>
+						<li><a class="capitalize-text" href="#">platform</a></li>
+						<li><a class="capitalize-text" href="#">usage</a></li>
+						<li><a class="capitalize-text" href="#">docs</a></li>
+						<li><a class="capitalize-text" href="#">contact</a></li>
+					</ul>
+				</div>
+				<!-- widget end -->
+				<div class="clear-float"></div>
+			</div>
+			<!-- footer-main end -->
+			<!-- footer-bottom start -->
+			<div class="footer__bottom">
+				<!-- copyright start -->
+				<div class="footer__copyright float-left">
+					<p>Copyright 2017. All rights reserved.</p>
+				</div>
+				<!-- copyright end -->
+				<!-- social-icons start -->
+				<div class="footer__social-icons float-right">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-google"></i></a>
+					<a href="#"><i class="fab fa-linkedin-in"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+				</div>
+				<!-- social-icons end  -->
+			</div>
+			<div class="clear-float"></div>
+			<!-- footer-bottom end -->
+		</footer>
+		<!-- footer end -->
+		<!-- Font Awesome JS -->
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+			integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+	</body>
 </html>
