--- a/homeWorkTasks/task10/index.html
+++ b/homeWorkTasks/task10/index.html
@@ -92,12 +92,20 @@
 				</div>
 				<!-- copyright end -->
 				<!-- social-icons start -->
-				<div class="footer__social-icons float-right">
-					<a href="#"><i class="fab fa-facebook-f"></i></a>
-					<a href="#"><i class="fab fa-google"></i></a>
-					<a href="#"><i class="fab fa-linkedin-in"></i></a>
-					<a href="#"><i class="fab fa-twitter"></i></a>
-				</div>
+				<ul class="footer__social-icons float-right">
+					<li>
+						<a class="facebook-icon" href="#"><i class="fab fa-circle fa-facebook-f"></i></a>
+					</li>
+					<li>
+						<a class="google-icon" href="#"><i class="fab fa-google"></i></a>
+					</li>
+					<li>
+						<a class="linkedin-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+					</li>
+					<li>
+						<a class="twitter-icon" href="#"><i class="fab fa-twitter"></i></a>
+					</li>
+				</ul>
 				<!-- social-icons end  -->
 			</div>
 			<div class="clear-float"></div>
