--- a/sessionTasks/task04/index.html
+++ b/sessionTasks/task04/index.html
@@ -8,10 +8,10 @@
 		<title>index</title>
 	</head>
 	<body>
-		<div>
-			<a href="#">
-				<span></span>
-			</a>
+		<div class="outer">
+			<span class="inner" href="#">
+				<span class="outer__inner"></span>
+			</سح>
 		</div>
 	</body>
 </html>
