adding BGs & aligning them with CSS Grid

--- a/homeWorkTasks/task11/index.html
+++ b/homeWorkTasks/task11/index.html
@@ -17,6 +17,20 @@
 		<title>index</title>
 	</head>
 	<body>
+		<!-- CONTAINER START -->
+		<section class="container">
+			<div class="member bg bg-url-1"></div>
+			<div class="member bg bg-url-2"></div>
+			<div class="member bg bg-url-3"></div>
+			<div class="member bg bg-url-4"></div>
+			<div class="member bg bg-url-5"></div>
+			<div class="member bg bg-url-6"></div>
+			<div class="member bg bg-url-7"></div>
+			<div class="member bg bg-url-8"></div>
+			<div class="member bg bg-url-9"></div>
+			<div class="member bg bg-url-10"></div>
+		</section>
+		<!-- CONTAINER END -->
 		<!-- Font Awesome JS -->
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
