--- a/homeWorkTasks/task11/index.html
+++ b/homeWorkTasks/task11/index.html
@@ -19,16 +19,136 @@
 	<body>
 		<!-- CONTAINER START -->
 		<section class="container">
-			<div class="member bg bg-url-1"></div>
-			<div class="member bg bg-url-2"></div>
-			<div class="member bg bg-url-3"></div>
-			<div class="member bg bg-url-4"></div>
-			<div class="member bg bg-url-5"></div>
-			<div class="member bg bg-url-6"></div>
-			<div class="member bg bg-url-7"></div>
-			<div class="member bg bg-url-8"></div>
-			<div class="member bg bg-url-9"></div>
-			<div class="member bg bg-url-10"></div>
+			<div class="member">
+				<div class="bg bg-url-1"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-2"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-3"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-4"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-5"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-6"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-7"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-8"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-9"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
+			<div class="member">
+				<div class="bg bg-url-10"></div>
+				<div class="member__social bg-gradient">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-linkedin"></i></a>
+				</div>
+				<div class="member__text">
+					<h5>Emma Sandoval</h5>
+					<span>Speaker</span>
+				</div>
+			</div>
 		</section>
 		<!-- CONTAINER END -->
 		<!-- Font Awesome JS -->
