--- a/homeWorkTasks/task12/index.html
+++ b/homeWorkTasks/task12/index.html
@@ -11,10 +11,34 @@
 		<title>index</title>
 	</head>
 	<body>
-		<!-- CONTAINER START -->
-		<section class="container"></section>
-
-		<!-- CONTAINER END -->
+		<!-- TRAVELER START -->
+		<section class="traveler">
+			<div class="traveler__content">
+				<div class="traveler__content__heading">
+					<span class="story">story</span>
+					<span class="discover-story">discover story</span>
+					<h3 class="our-story">our story</h3>
+				</div>
+				<div class="traveler__content__paragragh">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi quae
+						expedita fugiat quo incidunt, possimus temporibus aperiam eum,
+						quaerat sapiente.
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Dignissimos debitis enim a pariatur molestiae.
+					</p>
+				</div>
+			</div>
+			<div class="traveler__img">
+				<img
+					src="img/xtraveler.jpg.webp"
+					alt="a traveler man holding a suitcase"
+				/>
+			</div>
+		</section>
+		<!-- TRAVELER END -->
 		<!-- AOS JS -->
 		<!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script>
