completing journey section

--- a/homeWorkTasks/task12/index.html
+++ b/homeWorkTasks/task12/index.html
@@ -15,9 +15,9 @@
 		<section class="traveler">
 			<div class="traveler__content">
 				<div class="traveler__content__heading">
-					<span class="story">story</span>
-					<span class="discover-story">discover story</span>
-					<h3 class="our-story">our story</h3>
+					<span class="background-text">story</span>
+					<span class="small-text">discover story</span>
+					<h3 class="bottom-text">our story</h3>
 				</div>
 				<div class="traveler__content__paragragh">
 					<p>
@@ -39,6 +39,47 @@
 			</div>
 		</section>
 		<!-- TRAVELER END -->
+		<!-- JOURNEY START -->
+		<section class="journey">
+			<div class="journey__heading">
+				<span class="background-text">journey</span>
+				<span class="small-text">journey</span>
+				<h3 class="bottom-text">your journey start here</h3>
+			</div>
+			<div class="journey__container">
+				<div class="item">
+					<div class="bg bg-url-1"></div>
+					<button class="btn">&dollar;200</button>
+					<span class="btn-text">Dignissimos debitis</span>
+				</div>
+				<div class="item">
+					<div class="bg bg-url-2"></div>
+					<button class="btn">&dollar;390</button>
+					<span class="btn-text">Consectetur adipisicing</span>
+				</div>
+				<div class="item">
+					<div class="bg bg-url-3"></div>
+					<button class="btn">&dollar;180</button>
+					<span class="btn-text">Temporibus aperiam</span>
+				</div>
+				<div class="item">
+					<div class="bg bg-url-4"></div>
+					<button class="btn">&dollar;600</button>
+					<span class="btn-text">Expedita fugiat</span>
+				</div>
+				<div class="item">
+					<div class="bg bg-url-5"></div>
+					<button class="btn">&dollar;330</button>
+					<span class="btn-text">Consectetur adipisicing</span>
+				</div>
+				<div class="item">
+					<div class="bg bg-url-6"></div>
+					<button class="btn">&dollar;450</button>
+					<span class="btn-text">Consectetur Amet</span>
+				</div>
+			</div>
+		</section>
+		<!-- JOURNEY END -->
 		<!-- AOS JS -->
 		<!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script>
