customizing responsive bg

--- a/homeWorkTasks/task12/index.html
+++ b/homeWorkTasks/task12/index.html
@@ -11,8 +11,6 @@
 		<title>index</title>
 	</head>
 	<body>
-		<!-- height to test animation -->
-		<div style="height: 900px"></div>
 		<!-- TRAVELER START -->
 		<section class="traveler">
 			<div class="traveler__content">
@@ -44,7 +42,9 @@
 		<!-- JOURNEY START -->
 		<section class="journey">
 			<div class="journey__heading">
-				<span class="background-text">journey</span>
+				<div class="background-text">
+					<span>journey</span>
+				</div>
 				<span class="small-text">journey</span>
 				<h3 class="bottom-text">your journey start here</h3>
 			</div>
