adding animation word to AOS

--- a/homeWorkTasks/task12/index.html
+++ b/homeWorkTasks/task12/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- AOS CSS -->
+		<!-- AOS Animation CSS -->
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/main.css" />
@@ -82,7 +82,7 @@
 			</div>
 		</section>
 		<!-- JOURNEY END -->
-		<!-- AOS JS -->
+		<!-- AOS Animation JS -->
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script>
 			AOS.init();
