--- a/sessionTasks/task05/index.html
+++ b/sessionTasks/task05/index.html
@@ -9,16 +9,74 @@
 	</head>
 
 	<body>
+		<nav class="navbar">
+			<a class="img-box" href="#">
+				<img src="./img/logo.png" alt="logo" />
+			</a>
+			<ul class="list">
+				<a href="#"><li>Home</li></a>
+				<a href="#"><li>News</li></a>
+				<a href="#"><li>Contact</li></a>
+				<a href="#"><li>About</li></a>
+				<a href="#"><li>Menu</li></a>
+			</ul>
+		</nav>
 		<section class="section">
 			<div class="container">
 				<div class="box">
 					<img src="img/related-3.jpg" alt="" />
 					<div class="title">
-						<h2>
-							Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-							Provident, repellat!
-						</h2>
-						<p>Lorem, ipsum dolor.</p>
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<img src="img/related-3.jpg" alt="" />
+					<div class="title">
+						<h2>Lorem ipsum dolor</h2>
+						<p>Lorem ipsum dolor sit amet.</p>
 					</div>
 				</div>
 			</div>
