--- a/JS/session-task/session-02/index.html
+++ b/JS/session-task/session-02/index.html
@@ -10,10 +10,10 @@
 		<input type="number" id="value1" />
 		<input type="number" id="value2" />
 		<select id="select">
-			<option id="option" value="sum">+</option>
-			<option id="option" value="minus">-</option>
-			<option id="option" value="multiply">x</option>
-			<option id="option" value="divison">/</option>
+			<option value="sum">+</option>
+			<option value="minus">-</option>
+			<option value="multiply">x</option>
+			<option value="divison">/</option>
 		</select>
 		<button onclick="calc()" id="equal">=</button>
 		<script src="script.js"></script>
