--- a/JS/homework-tasks/task-03/index.html
+++ b/JS/homework-tasks/task-03/index.html
@@ -7,8 +7,7 @@
 		<title>index</title>
 	</head>
 	<body>
-		<input type="number" id="grade" />
-		<button onclick="submitResult()">submit</button>
+		<input onkeyup="submitResult()" type="number" id="grade" />
 		<button onclick="clearResult()">clear</button>
 		<script src="script.js"></script>
 	</body>
