--- a/JS/session-task/session-06/index.html
+++ b/JS/session-task/session-06/index.html
@@ -30,6 +30,11 @@
 				style="width: 20%"
 			/>
 		</div>
+
+		<div style="display: flex; justify-content: center; margin-bottom: 10px">
+			<img id="img" src="./img/img-1.jpg" alt="img" style="width: 70%" />
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
