--- a/JS/session-task/session-06/index.html
+++ b/JS/session-task/session-06/index.html
@@ -31,7 +31,7 @@
 			/>
 		</div>
 
-		<div style="display: flex; justify-content: center; margin-bottom: 10px">
+		<div style="display: flex; justify-content: center; margin-top: 50px">
 			<img id="img" src="./img/img-1.jpg" alt="img" style="width: 70%" />
 		</div>
 
