--- a/JS/session-task/session-06/index.html
+++ b/JS/session-task/session-06/index.html
@@ -7,6 +7,7 @@
 		<title>index</title>
 	</head>
 	<body>
+		<!-- task#01 -->
 		<div style="display: flex; justify-content: center; margin-bottom: 10px">
 			<img id="default" src="./img/img-1.jpg" alt="img-1" style="width: 70%" />
 		</div>
@@ -30,11 +31,10 @@
 				style="width: 20%"
 			/>
 		</div>
-
+		<!-- task#02 -->
 		<div style="display: flex; justify-content: center; margin-top: 50px">
 			<img id="img" src="./img/img-1.jpg" alt="img" style="width: 70%" />
 		</div>
-
 		<script src="script.js"></script>
 	</body>
 </html>
